--- a/src/main/resources/templates/allBooksPage.html
+++ b/src/main/resources/templates/allBooksPage.html
@@ -15,96 +15,108 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/chat.css}">
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-    <a href="/all-books"><img th:src="@{/images/logo.png}" alt="logo" height="60px" width="180px"/></a>
-    <!-- Search form -->
-    <div class="input-group md-form form-sm form-2 pl-0" style="width: 30%; margin: 0 auto;">
-        <input class="form-control my-0 py-1 orangered-border" id="search-key" type="text" placeholder="Search book"
-               aria-label="Search">
-        <div class="input-group-append">
+<main>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+        <a href="/all-books"><img th:src="@{/images/logo.png}" alt="logo" height="60px" width="180px"/></a>
+        <!-- Search form -->
+        <div class="input-group md-form form-sm form-2 pl-0" style="width: 30%; margin: 0 auto;">
+            <input class="form-control my-0 py-1 orangered-border" id="search-key" type="text" placeholder="Search book"
+                   aria-label="Search">
+            <div class="input-group-append">
             <span class="input-group-text orangered lighten-3" id="basic-text1" style="background-color: orangered">
                 <i class="fa fa-search text-grey" aria-hidden="true"></i>
             </span>
-        </div>
-    </div>
-    <div class="dropdown">
-        <button id="btn-upgrade" type="button" data-toggle="dropdown">
-            <div><span id="name" sec:authentication="principal.username"></span></div>
-        </button>
-        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-            <li role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/personal-cabinet">Personal
-                Cabinet</a></li>
-            <li sec:authorize="hasAuthority('ADMIN')" role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/admin-page">AdminPage</a></li>
-            <li role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/logout">Logout</a></li>
-        </ul>
-    </div>
-</nav>
-
-<div class="container-fluid" style="margin-top: -25px">
-    <div class="row">
-        <div class="col-1"><br></div>
-        <div class="col-8"><br></div>
-        <div class="col-1"><br></div>
-        <div class="col"><br></div>
-    </div>
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="col-8">
-            <div id="books-div">
-                <!--Books table-->
-                <table id="books-placeholder">
-                    <tbody>
-
-                    </tbody>
-                </table>
             </div>
         </div>
-        <div class="col-1"></div>
-        <div class="col"></div>
+        <div class="dropdown">
+            <button id="btn-upgrade" type="button" data-toggle="dropdown">
+                <div><span id="name" sec:authentication="principal.username"></span></div>
+            </button>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                <li role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/personal-cabinet">Personal
+                    Cabinet</a></li>
+                <li sec:authorize="hasAuthority('ADMIN')" role="presentation" class="presentation"><a role="menuitem"
+                                                                                                      tabindex="-1"
+                                                                                                      href="/admin-page">AdminPage</a>
+                </li>
+                <li role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container-fluid" style="margin-top: -25px">
+        <div class="row">
+            <div class="col-1"><br></div>
+            <div class="col-8"><br></div>
+            <div class="col-1"><br></div>
+            <div class="col"><br></div>
+        </div>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-8">
+                <div class="clearfix" id="books-placeholder">
+
+                </div>
+            </div>
+            <div class="col-1"></div>
+            <div class="col"></div>
+        </div>
+        <div class="row">
+            <div class="col-1"><br></div>
+            <div class="col-8">
+                <!--Pagination-->
+                <div id="pagination-placeholder">
+                    <ul class="pagination justify-content-center" style="margin:20px 0">
+
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1"><br></div>
+            <div class="col"></div>
+        </div>
+        <div class="row">
+            <div class="col-1"><br></div>
+            <div class="col-8"><br></div>
+            <div class="col-1"><br></div>
+            <div class="col"><br></div>
+        </div>
+        <div class="row">
+            <div class="col-1"><br></div>
+            <div class="col-8"><br></div>
+            <div class="col-1"><br></div>
+            <div class="col"><br></div>
+        </div>
     </div>
-    <div class="row">
-        <div class="col-1"><br></div>
-        <div class="col-8">
-            <!--Pagination-->
-            <div id="pagination-placeholder">
-                <ul class="pagination justify-content-center" style="margin:20px 0">
+
+    <div th:fragment="chat-page">
+        <button class="open-button" onclick="openForm()" id="open-button" type="submit">Chat</button>
+        <div id="chat-page" class="hidden">
+            <div class="chat-container">
+                <div class="chat-header" id="chat-header" onclick="closeForm()">
+                    <h5>Hide chat...</h5>
+                </div>
+                <div class="connecting">Connecting...
+                </div>
+                <br><br>
+                <ul id="messageArea">
 
                 </ul>
-            </div>
-        </div>
-        <div class="col-1"><br></div>
-        <div class="col"></div>
-    </div>
-</div>
-
-<div th:fragment="chat-page">
-    <button class="open-button" onclick="openForm()" id="open-button" type="submit">Chat</button>
-    <div id="chat-page" class="hidden">
-        <div class="chat-container">
-            <div class="chat-header" id="chat-header" onclick="closeForm()">
-                <h5>Hide chat...</h5>
-            </div>
-            <div class="connecting">Connecting...
-            </div>
-            <br><br>
-            <ul id="messageArea">
-
-            </ul>
-            <form id="messageForm" name="messageForm" nameForm="messageForm">
-                <div class="form-group">
-                    <div class="input-group clearfix">
-                        <input type="text" id="message" placeholder="Type a message..." autocomplete="off"
-                               class="form-control"/>
-                        <button type="submit" class="primary">Send</button>
+                <form id="messageForm" name="messageForm" nameForm="messageForm">
+                    <div class="form-group">
+                        <div class="input-group clearfix">
+                            <input type="text" id="message" placeholder="Type a message..." autocomplete="off"
+                                   class="form-control"/>
+                            <button type="submit" class="primary">Send</button>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
-</div>
+</main>
 <!--Footer-->
-<div class="jumbotron text-center" style="margin-bottom: 0"></div>
+<div class="jumbotron text-center"></div>
 <!--JS Script-->
 <script th:src="@{/scripts/allBooks.js}"></script>
 <script th:src="@{/scripts/chat.js}"></script>
