--- a/src/main/resources/templates/personalCab.html
+++ b/src/main/resources/templates/personalCab.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="utf-8">
     <title>Book Sharing</title>
@@ -17,194 +18,196 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
     <a href="/all-books"><img th:src="@{/images/logo.png}" alt="logo" height="60px" width="180px"/></a>
-    <div class="dropdown"><button id="btn-upgrade" type="button" data-toggle="dropdown"><div><span id="name" sec:authentication="principal.username"></span> </div></button>
+    <div class="dropdown">
+        <button id="btn-upgrade" type="button" data-toggle="dropdown">
+            <div><span id="name" sec:authentication="principal.username"></span></div>
+        </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-            <li role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/all-books">HomePage</a></li>
-            <li sec:authorize="hasAuthority('ADMIN')" role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/admin-page">AdminPage</a></li>
+            <li role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/all-books">HomePage</a>
+            </li>
+            <li sec:authorize="hasAuthority('ADMIN')" role="presentation" class="presentation"><a role="menuitem"
+                                                                                                  tabindex="-1"
+                                                                                                  href="/admin-page">AdminPage</a>
+            </li>
             <li role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/logout">Logout</a></li>
         </ul>
     </div>
 </nav>
-
-<div class="container-fluid" style="margin-top: -25px">
-    <div class="row">
-        <div class="col-2"><br></div>
-        <div class="col-8"><br></div>
-<!--        <div class="col-1"><br></div>-->
-<!--        <div class="col"><br></div>-->
-    </div>
-
-    <div class="row">
-        <div class="col-2 ">
-            <h3>Personal Cabinet</h3>
-            <br>
-            <img class="user" th:src="@{/images/user-icon.jpg}"/>
-            <br>
-            <br>
-            <br>
-            <button class="added-books" data-toggle="modal" data-target="#exampleModal2">
-                Share Your Book
-            </button>
-            <div aria-hidden="true" aria-labelledby="exampleModalLabel" class="addbook modal fade" id="exampleModal2" tabindex="-1">
-                <div class="modal-dialog modal-dialog-centered">
-<!--            <div class="modal" id="myModal">-->
-                <!-- Modal content -->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5>ADD NEW BOOK </h5>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label for="txt-title"><span class="req"></span> Book Title </label>
-                            <input autocomplete="off" class="form-control add" id="txt-title"
-                                   oninput="validateTitle(this.value);"
-                                   required
-                                   type="text"/>
-                            <div id="errLast-title"></div>
-                        </div>
-                        <div class="form-group first-last-name">
-                            <label for="txt-first-name"><span class="req"></span> Author first name </label>
-                            <input autocomplete="off" class="form-control add" id="txt-first-name"
-                                   oninput="validateFirstName(this.value);"
-                                   required
-                                   type="text"/>
-                            <div class="error-messages" id="errLast-first-name"></div>
-                        </div>
-
-                        <div class="form-group first-last-name">
-                            <label for="txt-last-name"><span class="req"></span> Author last name </label>
-                            <input autocomplete="off" class="form-control add" id="txt-last-name"
-                                   oninput="validateLastName(this.value);"
-                                   required
-                                   type="text"/>
-                            <div class="error-messages" id="errLast-last-name"></div>
-                        </div>
-                        <br>
-                        <div class="form-group language-pages">
-                            <label for="txt-language"><span class="req"></span> Language </label>
-                            <input autocomplete="off" class="form-control add" id="txt-language"
-                                   oninput="validateLanguage(this.value);"
-                                   required
-                                   type="text"/>
-                            <div class="error-messages" id="errLast-language"></div>
-                        </div>
-
-                        <div class="form-group language-pages">
-                            <label for="txt-pages"><span class="req"></span> Pages </label>
-                            <input autocomplete="off" class="form-control add" id="txt-pages"
-                                   oninput="validatePages(this.value);"
-                                   required
-                                   type="number"/>
-                            <div class="error-messages" id="errLast-pages"></div>
-                        </div>
-
-                        <p>Tags</p>
-                        <div class="form-group tags-input"  data-name="tags-input"></div>
-
-                        <div class="form-group description-div">
-                            <label for="txt-description"><span class="req"></span> Description </label>
-                            <textarea autocomplete="off" class="form-control add" id="txt-description"
-                                      oninput="validateDescription(this.value);"
-                                      required
-                                      style="height: 60px" type="text"></textarea>
-                            <div class="error-messages" id="errLast-description"></div>
-                        </div>
-                    </div>
-                    <div class="modal-footer-add-book">
-                        <button class="button-submit close-button " data-dismiss="modal">Close</button>
-                        <button class="button-submit" id="submit-add-book"  >Add Book</button>
-                    </div>
+<main>
+    <div class="container-fluid" style="margin-top: -25px">
+        <div class="row">
+            <div class="col-2"><br></div>
+            <div class="col-9"><br></div>
+            <div class="col-1"><br></div>
+        </div>
+        <div class="row">
+            <div class="col-2 text-center">
+                <h5>Hi, <span sec:authentication="principal.username"></span>!</h5>
+                <br>
+                <div class="shadow p-4 mb-4 bg-white" style="width: 100%; margin: 0">
+                    <img id="user-icon" th:src="@{/images/user-icon.jpg}" style="width: 100%; margin: 0"/>
                 </div>
-<!--            </div>-->
-        </div>
-            </div>
-        </div>
+                <br>
+                <div class="list-group">
+                    <a href="" class="list-group-item list-group-item-action" data-toggle="modal"
+                       data-target="#exampleModal2"
+                       style="width: 100%">Share
+                        your book</a>
+                    <a href="/all-books" class="list-group-item list-group-item-action" style="width: 100%">Home
+                        page</a>
+                    <a href="/logout" class="list-group-item list-group-item-action" style="width: 100%">Log out</a>
+                </div>
 
-        <div class="col-8 main-content">
-            <h4 class="assignedBooksHeader">Assigned books</h4>
-            <br>
-            <div class="assignedBooks">
-                <table id="books-table">
-                    <tbody>
+                <div aria-hidden="true" aria-labelledby="exampleModalLabel" class="addbook modal fade"
+                     id="exampleModal2"
+                     tabindex="-1">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5>ADD NEW BOOK </h5>
+                            </div>
+                            <div class="modal-body">
+                                <div class="form-group">
+                                    <label for="txt-title"><span class="req"></span> Book Title </label>
+                                    <input autocomplete="off" class="form-control add" id="txt-title"
+                                           oninput="validateTitle(this.value);"
+                                           required
+                                           type="text"/>
+                                    <div id="errLast-title"></div>
+                                </div>
+                                <div class="form-group first-last-name">
+                                    <label for="txt-first-name"><span class="req"></span> Author first name </label>
+                                    <input autocomplete="off" class="form-control add" id="txt-first-name"
+                                           oninput="validateFirstName(this.value);"
+                                           required
+                                           type="text"/>
+                                    <div class="error-messages" id="errLast-first-name"></div>
+                                </div>
 
-                    </tbody>
-                </table>
-            </div>
-        </div>
-<!--        <div class="col-1"></div>-->
-<!--        <div class="col"></div>-->
-    </div>
+                                <div class="form-group first-last-name">
+                                    <label for="txt-last-name"><span class="req"></span> Author last name </label>
+                                    <input autocomplete="off" class="form-control add" id="txt-last-name"
+                                           oninput="validateLastName(this.value);"
+                                           required
+                                           type="text"/>
+                                    <div class="error-messages" id="errLast-last-name"></div>
+                                </div>
+                                <br>
+                                <div class="form-group language-pages">
+                                    <label for="txt-language"><span class="req"></span> Language </label>
+                                    <input autocomplete="off" class="form-control add" id="txt-language"
+                                           oninput="validateLanguage(this.value);"
+                                           required
+                                           type="text"/>
+                                    <div class="error-messages" id="errLast-language"></div>
+                                </div>
 
-    <div class="row">
-        <div class="col-2 "><br></div>
-        <div class="col-8">
-            <!--Pagination-->
-            <div id="pagination-placeholder">
-                <ul class="pagination justify-content-center" style="margin:20px 0">
-                </ul>
-            </div>
-        </div>
-<!--        <div class="col-1"><br></div>-->
-<!--        <div class="col"><br></div>-->
-    </div>
-</div>
-<div th:insert="allBooksPage :: chat-page">
-</div>
+                                <div class="form-group language-pages">
+                                    <label for="txt-pages"><span class="req"></span> Pages </label>
+                                    <input autocomplete="off" class="form-control add" id="txt-pages"
+                                           oninput="validatePages(this.value);"
+                                           required
+                                           type="number"/>
+                                    <div class="error-messages" id="errLast-pages"></div>
+                                </div>
 
-<!-- Modal -->
-<div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="exampleModal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">EXTEND TIME REQUEST</h5>
-            </div>
-            <div class="modal-body" id="modalForSubmitAndError">
+                                <p>Tags</p>
+                                <div class="form-group tags-input" data-name="tags-input"></div>
 
-                <div class="input-group mb-4">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">new due <br> date</span>
-                        <div class="calendar-assign">
-                            <div class="input-data-calendar">
-                                <input id="setDate" type="date" >
+                                <div class="form-group description-div">
+                                    <label for="txt-description"><span class="req"></span> Description </label>
+                                    <textarea autocomplete="off" class="form-control add" id="txt-description"
+                                              oninput="validateDescription(this.value);"
+                                              required
+                                              style="height: 60px" type="text"></textarea>
+                                    <div class="error-messages" id="errLast-description"></div>
+                                </div>
+                            </div>
+                            <div class="modal-footer-add-book">
+                                <button class="button-submit close-button" data-dismiss="modal">Close</button>
+                                <button class="button-submit" id="submit-add-book">Add Book</button>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="col-9">
+                <h4 class="assignedBooksHeader">My assigned books</h4>
+                <!--Books placeholder-->
+                <div class="clearfix" id="books-placeholder">
 
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Extend <br> reason</span>
-                    </div>
-                    <textarea class="form-control add" id="textArea"></textarea>
                 </div>
             </div>
-            <div class="mt-2" id="invalidReason"></div>
-
-            <div class="modal-body" id="messageSucces">
-                <h3>your request was sent <br> successfully !</h3>
-                <img id="succesImage" src="/images/check.png"/>
+            <div class="col-1"></div>
+        </div>
+        <div class="row">
+            <div class="col-2"><br></div>
+            <div class="col-9">
+                <!--Pagination-->
+                <div id="pagination-placeholder">
+                    <ul class="pagination justify-content-center" style="margin:20px 0">
+                    </ul>
+                </div>
             </div>
+            <div class="col-1"><br></div>
+        </div>
+    </div>
+    <div th:insert="allBooksPage :: chat-page">
+    </div>
 
-            <div class="modal-body" id="messageError">
-                <h3>invalid input <br> please try again !</h3>
-                <img id="errorImage" src="/images/error.png"/>
-            </div>
+    <!-- Modal -->
+    <div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="exampleModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">EXTEND TIME REQUEST</h5>
+                </div>
+                <div class="modal-body" id="modalForSubmitAndError">
+                    <div class="input-group mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">new due <br> date</span>
+                            <div class="calendar-assign">
+                                <div class="input-data-calendar">
+                                    <input id="setDate" type="date">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-            <div class="modal-footer">
-                <button class="buton-submit" data-dismiss="modal" id="close" onclick="clearTextArea()" type="button">
-                    ClOSE
-                </button>
-                <button class="buton-submit" id="submit" onclick="submitRequest()"> SUBMIT</button>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">Extend <br> reason</span>
+                        </div>
+                        <textarea class="form-control add" id="textArea" style="height: auto"></textarea>
+                    </div>
+                </div>
+                <div class="mt-2" id="invalidReason"></div>
+
+                <div class="modal-body" id="messageSucces">
+                    <h3>your request was sent <br> successfully !</h3>
+                    <img id="succesImage" src="/images/check.png"/>
+                </div>
+
+                <div class="modal-body" id="messageError">
+                    <h3>invalid input <br> please try again !</h3>
+                    <img id="errorImage" src="/images/error.png"/>
+                </div>
+
+                <div class="modal-footer">
+                    <button class="buton-submit" data-dismiss="modal" id="close" onclick="clearTextArea()"
+                            type="button">
+                        ClOSE
+                    </button>
+                    <button class="buton-submit" id="submit" onclick="submitRequest()"> SUBMIT</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-
-
+</main>
 <!--Footer-->
-<div class="jumbotron text-center" style="margin-bottom:0"></div>
+<div class="jumbotron text-center"></div>
 <!--JS Script-->
-
 <script th:src="@{/scripts/personalCabinet.js}"></script>
 <script th:src="@{/scripts/chat.js}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
